test/parse-error/cucumber.js
module.exports = {
  default: {
    require: ['test/custom-world/steps.ts'],
    requireModule: ['ts-node/register'],
  },
};
